# internal/configs/root_user.pb.validate.go
@@ -1,0 +1,155 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: configs/root_user.proto
+
+package configs
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on RootUser with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *RootUser) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on RootUser with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in RootUserMultiError, or nil
+// if none found.
+func (m *RootUser) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *RootUser) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Enabled
+
+	// no validation rules for Id
+
+	// no validation rules for Username
+
+	// no validation rules for Password
+
+	// no validation rules for Name
+
+	// no validation rules for Email
+
+	// no validation rules for Nickname
+
+	// no validation rules for Avatar
+
+	// no validation rules for Mobile
+
+	// no validation rules for Description
+
+	if len(errors) > 0 {
+		return RootUserMultiError(errors)
+	}
+
+	return nil
+}
+
+// RootUserMultiError is an error wrapping multiple validation errors returned
+// by RootUser.ValidateAll() if the designated constraints aren't met.
+type RootUserMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m RootUserMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m RootUserMultiError) AllErrors() []error { return m }
+
+// RootUserValidationError is the validation error returned by
+// RootUser.Validate if the designated constraints aren't met.
+type RootUserValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RootUserValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RootUserValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RootUserValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RootUserValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RootUserValidationError) ErrorName() string { return "RootUserValidationError" }
+
+// Error satisfies the builtin error interface
+func (e RootUserValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRootUser.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RootUserValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RootUserValidationError{}
