# resources/docs/openapi/openapi.yaml
@@ -22,6 +22,12 @@ paths:
             tags:
                 - LoginAPI
             operationId: LoginAPI_CaptchaID
+            parameters:
+                - name: ts
+                  in: query
+                  description: The timestamp of the request prevent caching of the same result
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
@@ -216,7 +222,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/google.protobuf.Any'
+                            $ref: '#/components/schemas/api.v1.services.common.LoginRequest_Data'
                 required: true
             responses:
                 "200":
@@ -763,6 +769,17 @@ components:
             properties:
                 success:
                     type: boolean
+        api.v1.services.common.LoginRequest_Data:
+            type: object
+            properties:
+                username:
+                    type: string
+                password:
+                    type: string
+                captcha_id:
+                    type: string
+                captcha_code:
+                    type: string
         api.v1.services.common.LoginResponse:
             type: object
             properties:
